# gitv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.nix  release-plz.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  build.yml  cd.yml  machete.yml  nix.yml  release-plz.yml  rust.yml  typos.yml
benches/: ui_hotspots.rs
crates/hyperrat/: CHANGELOG.md  Cargo.toml
crates/hyperrat/src/: lib.rs
crates/ratatui-toaster/: CHANGELOG.md  Cargo.toml
src/: errors.rs  lib.rs  prelude.rs
src/app/: actions.rs  cli.rs  commands.rs  mod.rs  state.rs
src/auth/: env.rs  keyring.rs  mod.rs
src/config/: defaults.rs  mod.rs
src/filters/: label.rs  mod.rs  regex.rs
src/github/: issues.rs  labels.rs  mod.rs  repos.rs
src/input/: keymap.rs
src/models/: issue.rs  label.rs  mod.rs  repo.rs  user.rs
src/storage/: memory.rs
src/ui/: focus.rs  layout.rs  macros.rs  mod.rs  testing.rs  theme.rs  utils.rs
src/ui/components/: help.rs  issue_conversation.rs  issue_convo_preview.rs  issue_create.rs  issue_detail.rs  issue_list.rs  label_filter.rs  label_list.rs  mod.rs  search_bar.rs  status_bar.rs  title_bar.rs  toast.rs
src/ui/components/toast/: types.rs  widget.rs
src/ui/widgets/: color_picker.rs
tests/snapshots/: markdown_checklists__markdown_preview_keeps_checked_and_unchecked_prefixes.snap  markdown_checklists__markdown_preview_renders_ascii_checklists.snap  markdown_checklists__markdown_preview_wraps_checklist_continuations.snap
