[package]
name = "issue_me"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
keyring = "3.6.3"
octocrab = "0.49.5"
rat-widget = "3.1.1"
ratatui = "0.30.0"
ratatui-macros = "0.7.0"
thiserror = "2.0.18"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
